<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_border"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:textColor="@color/cobalt_blue"
                android:text="@string/id_find_title"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/id_find_name"
                android:textColor="@color/liberty_blue"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/IdFindFragment_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/id_find_edit_name"
                android:text=""
                android:autofillHints=""
                android:inputType="text"
                android:singleLine="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/id_find_email"
                android:textColor="@color/liberty_blue"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/IdFindFragment_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="30dp"
                    android:background="#ffffff"
                    android:ems="11"
                    android:hint="@string/id_find_email_hint"
                    android:inputType="textPersonName"
                    android:text=""
                    android:autofillHints=""
                    android:singleLine="true"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/IdFindFragment_mail_cn_button"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/check_button"
                    android:text="@string/id_find_cn_button"
                    android:textColor="@color/blue_white"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/id_find_cn"
                android:textColor="@color/liberty_blue"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/IdFindFragment_mail_cn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="30dp"
                    android:background="#ffffff"
                    android:ems="11"
                    android:hint="@string/id_find_cn_hint"
                    android:inputType="textPassword"
                    android:text=""
                    android:autofillHints=""
                    android:singleLine="true"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/IdFindFragment_mail_cn_check_button"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/check_button"
                    android:text="@string/id_find_cn_check_button"
                    android:textColor="@color/blue_white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/IdFindFragment_check_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/bin_blue"
        android:textColor="@color/blue_white"
        android:text="@string/id_find_ok_button"/>
</LinearLayout>